--- a/Veterinaria.csproj
+++ b/Veterinaria.csproj
@@ -50,6 +50,7 @@
     <Compile Include="control\C_Bairro.cs" />
     <Compile Include="control\C_Cep.cs" />
     <Compile Include="control\C_Cidade.cs" />
+    <Compile Include="control\C_Cidanimal.cs" />
     <Compile Include="control\C_Estado.cs" />
     <Compile Include="control\C_Marca.cs" />
     <Compile Include="control\C_Pais.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="control\C_TipoAnimal.cs" />
     <Compile Include="control\C_TipoFuncionario.cs" />
     <Compile Include="control\C_TipoProduto.cs" />
+    <Compile Include="control\C_TipoServico.cs" />
     <Compile Include="control\I_Metodos_Comuns.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -71,6 +73,7 @@
     <Compile Include="model\Bairro.cs" />
     <Compile Include="model\Cep.cs" />
     <Compile Include="model\Cidade.cs" />
+    <Compile Include="model\Cidanimal.cs" />
     <Compile Include="model\Cliente.cs" />
     <Compile Include="model\Clientetelefone.cs" />
     <Compile Include="model\Estado.cs" />
@@ -87,6 +90,7 @@
     <Compile Include="model\Tipoanimal.cs" />
     <Compile Include="model\Tipofuncionario.cs" />
     <Compile Include="model\Tipoproduto.cs" />
+    <Compile Include="model\Tiposervico.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="view\FrmRaca.cs">
