--- a/Veterinaria.csproj
+++ b/Veterinaria.csproj
@@ -89,6 +89,12 @@
     <Compile Include="model\Tipoproduto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="view\Frmbairro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\Frmbairro.Designer.cs">
+      <DependentUpon>Frmbairro.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\FrmRaca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +126,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="view\Frmbairro.resx">
+      <DependentUpon>Frmbairro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\FrmRaca.resx">
       <DependentUpon>FrmRaca.cs</DependentUpon>
     </EmbeddedResource>
